Saved 2019-03-13-TVM.md with Dillinger.io

--- a/_posts/2019-03-13-TVM.md
+++ b/_posts/2019-03-13-TVM.md
@@ -4,3 +4,51 @@ title   : "TVM"
 date    : 2019-03-13
 author  : "pshung"
 ---
+# 2019-03-13
+# build TVM with llvm 
+```bash
+git clone --recursive https://github.com/dmlc/tvm
+cd tvm; mkdir build
+cp ../cmake/config.make .
+set USE_LLVM to the path of the desired llvm-config
+make -j8
+```
+If building is successfully, four primary shared libraries will be generated.   
+libtvm.so: the core compilation stack of tvm   
+libnnvm_compiler.so: the graph level IR (has been replaced by Relay IR)    
+libtvm_runtime.so: the deployment runtime   
+libtvm_topi.so: the NN operator repository.  
+
+# run example code howto_deploy with RISC-V.
+enter app/howto_deploy.
+change the target device to risc-v backend.
+```python
+target = tvm.target.create('llvm -device=riscv_cpu -target=riscv64-elf -mcpu=generic-rv64 --system-lib')
+```
+If TVM building is successfully. file test_addone_sys.o will be generated which contains RISC-V ISA.
+
+compile the TVM runtime with RISC-V toolchain
+```bash
+riscv64-linux-g++ tvm_runtime_pack.cc 
+```
+
+compile the user program and link with model and runtime.
+```
+riscv64-linux-g++ cpp_deploy.cc lib/test_addone_sys.o lib/libtvm_runtime_pack.o -lpthread -latomic
+```
+
+run the compiled program with QEMU-RISC-V
+```bash
+qemu-riscv64 -L riscv64-linux/sysroot/ lib/cpp_deploy_pack
+```
+
+# run example code bundle_deploy with RISC-V
+enter apps/bundle_deploy  
+rewrite the build_model.py, download caffe2 resnet50 model. compile with NNVM for RISC-V target.   
+It will generate model.o (resnet50 model in TVM runtime module), graph.json (describe the model structure), params.bin(the filter weight)
+
+The example uses **xxd -i** to format the graph.json and prarms.bin into C-style static array and will compile them into final executable. The approach is useful when target lacks file system or the ability to dynamically allocate memory.   
+However, this approach requires huge memory whiling compiling. (It takes 18G memory in my environment). If no enought memory in your system, the process is going to be killed.
+Rewrite the code to open the params.bin at runtime so that the compilation time is reduced.
+The example generates random input data. Rewrite the code to load a specified png file using libpng.
+
