Saved 2018-12-05-AI.md with Dillinger.io

--- a/_posts/2018-12-05-AI.md
+++ b/_posts/2018-12-05-AI.md
@@ -5,8 +5,29 @@ date    : 2018-10-26
 author  : "pshung"
 ---
 # 2019-03-14
+
+* Why tf-slim, tf-learn, keras, tensorlayer? They are high level API of tensorflow since tensorflow API is not user-friendly. [link](https://www.zhihu.com/question/50030898/answer/119785042)
+
+
+
 * Weight regularization
+A common way to mitigate overfitting is to put constraints on the complexity of a network by forcing its weights only to take small values, which makes the distribution of weight values more "regular". This is called "weight regularization", and it is done by adding to the loss function of the network a cost associated with having large weights.
+L1 normalization: where the cost added is proportional to the absolute value of the weights coefficients 
+L2 normalization: where the cost added is proportional to the square value of the weights coefficients.
+以L2 正規化來解釋, 就是當這個weight 平方越大, 則增加penalty 到loss function. 且這個penalty 只在training 時加入.
+
 * Dropout
+randomly "dropping out" (i.e. set to zero) a number of output features of the layer during training
+
+* Batch, Iteration, Epoch
+Batch: the number of data set used to evalutate the loss function and update the parameters.    
+Iteration: the number of batch to go over each data one time    
+Epoch: the number of iteration to go over each data.   
+For example:   
+1000 pictures, batch 10.  It takes 10 pictures and updates the parameter.   
+The process needs 1000/10 = 100 iteration. This is called one epoch.     
+If epoch is two, the whole process will repeat so that each picture is viewed twice.    
+
 
 ## 2019-03-13
 Seedbank: store AI examples written in colab.
