Saved 2019-03-13-TVM.md with Dillinger.io

--- a/_posts/2019-03-13-TVM.md
+++ b/_posts/2019-03-13-TVM.md
@@ -4,6 +4,10 @@ title   : "TVM"
 date    : 2019-03-13
 author  : "pshung"
 ---
+# 2019-03-14
+# Does tvm support learning?
+NNVM seems not fully support training. [link](https://discuss.tvm.ai/t/dose-tvm-support-training-models/225/8)    
+How about relay? seems to be in progress [link](https://discuss.tvm.ai/t/status-of-gradients-and-training-in-relay/1195)   
 # 2019-03-13
 # build TVM with llvm 
 ```bash
