Saved 2018-12-05-AI.md with Dillinger.io

--- a/_posts/2018-12-05-AI.md
+++ b/_posts/2018-12-05-AI.md
@@ -4,6 +4,16 @@ title   : "AI"
 date    : 2018-10-26
 author  : "pshung"
 ---
+
+# 2019-03-19
+Transfer learning example for image classification
+[TensorFlow For Poets](https://codelabs.developers.google.com/codelabs/tensorflow-for-poets/#0)  
+[how to retrain images](https://www.tensorflow.org/hub/tutorials/image_retraining)    
+
+[An interesting webside to play NN](http://playground.tensorflow.org/#activation=tanh&batchSize=10&dataset=circle&regDataset=reg-plane&learningRate=0.03&regularizationRate=0&noise=0&networkShape=4,2&seed=0.58304&showTestData=false&discretize=false&percTrainData=50&x=true&y=true&xTimesY=false&xSquared=false&ySquared=false&cosX=false&sinX=false&cosY=false&sinY=false&collectStats=false&problem=classification&initZero=false&hideText=false&stepButton_hide=false)    
+
+[Launching TensorFlow Lite for Microcontrollers](https://petewarden.com/2019/03/07/launching-tensorflow-lite-for-microcontrollers/)    
+
 # 2019-03-14
 
 * Why tf-slim, tf-learn, keras, tensorlayer? They are high level API of tensorflow since tensorflow API is not user-friendly. [link](https://www.zhihu.com/question/50030898/answer/119785042)
