Saved 2018-12-05-AI.md with Dillinger.io

--- a/_posts/2018-12-05-AI.md
+++ b/_posts/2018-12-05-AI.md
@@ -4,7 +4,15 @@ title   : "AI"
 date    : 2018-10-26
 author  : "pshung"
 ---
+# 2019-03-20
+Term: training set, validation set and test set. [link](https://blog.csdn.net/simongeek/article/details/78200127)
+training set: 考古題.    
+validation: 模擬考.    
+test set: 真實考試.   
 
+> A true measure of the performance of the network is to measure its performance on a data set not contained in the training data -- this is measured by the validation accuracy. If the train accuracy is high but the validation accuracy remains low, that means the network is overfitting and memorizing particular features in the training images that aren't helpful more generally. 
+ 
+ 
 # 2019-03-19
 Transfer learning example for image classification
 [TensorFlow For Poets](https://codelabs.developers.google.com/codelabs/tensorflow-for-poets/#0)  
@@ -12,7 +20,10 @@ Transfer learning example for image classification
 
 [An interesting webside to play NN](http://playground.tensorflow.org/#activation=tanh&batchSize=10&dataset=circle&regDataset=reg-plane&learningRate=0.03&regularizationRate=0&noise=0&networkShape=4,2&seed=0.58304&showTestData=false&discretize=false&percTrainData=50&x=true&y=true&xTimesY=false&xSquared=false&ySquared=false&cosX=false&sinX=false&cosY=false&sinY=false&collectStats=false&problem=classification&initZero=false&hideText=false&stepButton_hide=false)    
 
-[Launching TensorFlow Lite for Microcontrollers](https://petewarden.com/2019/03/07/launching-tensorflow-lite-for-microcontrollers/)    
+*[Launching TensorFlow Lite for Microcontrollers](https://petewarden.com/2019/03/07/launching-tensorflow-lite-for-microcontrollers/)
+explain why model must be extremely small enough to fit in kilobytes of memory in MCU.
+*[Tensorflow lite micro](https://github.com/tensorflow/tensorflow/tree/master/tensorflow/lite/experimental/micro)
+more lightweight tensorflow designed for micro-level cpu. The core runtime takes only 16kB.   
 
 # 2019-03-14
 
