Saved 2018-12-05-AI.md with Dillinger.io

--- a/_posts/2018-12-05-AI.md
+++ b/_posts/2018-12-05-AI.md
@@ -5,12 +5,21 @@ date    : 2018-10-26
 author  : "pshung"
 ---
 # 2019-03-20
-Term: training set, validation set and test set. [link](https://blog.csdn.net/simongeek/article/details/78200127)  
+Term: training set, validation set and test set. [link](https://blog.csdn.net/simongeek/article/details/78200127)    
 training set: 考古題.    
 validation: 模擬考.    
 test set: 真實考試.   
 
 > A true measure of the performance of the network is to measure its performance on a data set not contained in the training data -- this is measured by the validation accuracy. If the train accuracy is high but the validation accuracy remains low, that means the network is overfitting and memorizing particular features in the training images that aren't helpful more generally. 
+
+Term: cross entropy    
+>Cross entropy is a loss function which gives a glimpse into how well the learning process is progressing. The training's objective is to make the loss as small as possible, so you can tell if the learning is working by keeping an eye on whether the loss keeps trending downwards
+
+ **Entropy should become smaller over the training time.**    
+
+Term: learning rate.    
+loss function is usually designed as differentiable so that we can find a better answer along the gradient that reduces the loss function. Gradient gives us a direction but not the distance we should move. If moving too far, we may loss the optimal answer, if moving too short, we need to spend more time to reach the best answer.    
+
  
  
 # 2019-03-19
