Saved 2018-12-05-AI.md with Dillinger.io

--- a/_posts/2018-12-05-AI.md
+++ b/_posts/2018-12-05-AI.md
@@ -20,7 +20,14 @@ Term: cross entropy
 Term: learning rate.    
 loss function is usually designed as differentiable so that we can find a better answer along the gradient that reduces the loss function. Gradient gives us a direction but not the distance we should move. If moving too far, we may loss the optimal answer, if moving too short, we need to spend more time to reach the best answer.    
 
- 
+# How to collect a set of training images? [link](https://www.tensorflow.org/hub/tutorials/image_retraining#creating_a_set_of_training_images)    
+1. collect at least hundreds of images of each object.    
+2. the collected images should be able to represent the real cases.    
+
+# Flatbuffer
+The primary benefit of FlatBuffers comes from the fact that they can be memory-mapped, and used directly from disk without being loaded and parsed.
+
+
  
 # 2019-03-19
 Transfer learning example for image classification
